Simpler fix for Opera layout issue.

--- a/sass/grids.sass
+++ b/sass/grids.sass
@@ -78,8 +78,3 @@
   _position: relative
   _left: -3px
   _margin-right: -3px
-
-
-*[class|=lastUnit]
-  float: none
-  width: auto
